# fastapi-auth

./: .env.sample  .gitignore  README.md  alembic.ini  depends.py  errors.py  main.py  pyproject.toml  user_database.db
app/: errors.py  main.py  version.py
app/db/: base.py  connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 10aadb248510_create_usertoken_model.py  74f3224bc277_create_user_table.py  ad2c6e3d5bc6_added_name_of_the_user.py  b1de4699fb96_update_user_model_field_name_to_created_.py  edfc880cf085_create_user_and_usertoken_relationship_.py
app/routers/: auth.py
app/schemas/: user.py  usertoken.py
app/services/: blocklist.py  user.py  usertoken.py
app/usecases/: user.py
app/utils/: auth.py  jwt.py  redis.py  settings.py
db/: connection.py  models.py
migrations/: env.py
routers/: auth.py
schemas/: response_result.py
usecases/: user.py
utils/: auth.py  jwt.py
